--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 iced = {version = "0.7.0"}
 rodio = {version = "0.16.0"}
 home = {version = "0.5.4"}
+base64 = {version = "0.21.0"}
+flate2 = {version = "1.0.25"}
+quick-xml = {version = "0.27.1"}
