--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-package]
+[package]
 name = "pipedash"
 version = "0.1.0"
 edition = "2021"
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = {version = "0.20.1"}
 rodio = {version = "0.16.0"}
 home = {version = "0.5.4"}
 base64 = {version = "0.21.0"}
