--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = {version = "0.20.1"}
-rodio = {version = "0.16.0"}
-home = {version = "0.5.4"}
-base64 = {version = "0.21.0"}
-flate2 = {version = "1.0.25"}
+eframe = "0.20.1"
+rodio = "0.16.0"
+home = "0.5.4"
+base64 = "0.21.0"
+flate2 = "1.0.25"
 gd_plist = {git = "https://github.com/Syudagye/gd-plist.git", version = "1.4.0"}
-chrono = {version = "0.4.23"}
-ordered-float = {version = "3.4.0"}
-thiserror = {version = "1.0.38"}
+chrono = "0.4.23"
+ordered-float = "3.4.0"
+thiserror = "1.0.38"
 reqwest = {version = "0.11.14", features = [ "blocking" ]}
+urlencoding = "2.1.2"
