--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ thiserror = "1.0.38"
 reqwest = {version = "0.11.14", features = [ "blocking" ]}
 urlencoding = "2.1.2"
 md5 = "0.7.0"
+itertools = "0.10.5"
+directories = "4.0.1"
+simplelog = "0.12.0"
+log = "0.4.17"
